[박성조] sprint3 (#26)
* 수정: git에서 .idea추적 중인거 끊음

* 수정: 2차 모범답안 내용으로 변경함
1. 앞으로 Spring Boot으로 마이그레이션할때는 초반 모범답안과 비슷한게 추후에 수정이 용이하다고 함.
2. 모범답안과 내 코드의 차이는 확인하였음
  - 모범 답안은 FileRepo에서 File을 찾은 뒤, 따로 Map에 저장하지 않음. File 자체로만 컨트롤 함.
    - 나의 FileRepo는 File을 찾은 뒤, Map에 추가적으로 저장하여 조회에 사용함.
  - Entity의 update메서드에서 update방식이 다름.
    - 모범답안은 뭐라도 수정되는지 체크하고(bool 변수 사용), update날짜를 변경
    - 나의 코드는 이 부분이 없음. 무조건 update날짜를 변경 중

* 수정: Java Project -> Spring Boot 프로젝트로 마이그레이션함.

* 수정: 3차미션 중, 1차까지 완료

* 수정: spring파일 추적안되던거 추가

* 수정: 1차 2차 오ã완료

* 수정: 약간의 수정

* Remove .discodeit from tracking

* 프로젝트 모범답안 분석 중

* 수정: PR수정사항 반역